<resources>
    <string name="house_sheshi">补录</string>
    <string name="app_name">手机维护信息</string>
    <string name="home_exits">再按一次后退键退出程序</string>
    <string name="home_login">登录</string>
    <string name="home_login_name">账号</string>
    <string name="home_login_password">密码</string>
    <string name="submit">提交</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="home_login_no_password">忘记密码</string>
    <string name="login_password">账号密码登录</string>
    <string name="plaess_login">请输入账号</string>
    <string name="plaess_password">请输入密码</string>
    <string name="login_agreement">点击登录按钮代表您已同意用户协议和隐私政策</string>
    <string name="register_name_digits">._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="home_login_null">密码或账号不能为空</string>
    <string name="home_login_password_null">密码不能为空</string>
    <string name="home_login_password_length">密码长度为6~18位</string>
    <string name="home_not_network">网络无法连接</string>
    <string name="house_task_dealt">待办任务</string>
    <string name="house_task_numbers">任务单号：</string>
    <string name="house_task_adress">任务地址：</string>
    <string name="house_task_time">任务时间：</string>
    <string name="house_task_shenghe">提交审核</string>
    <string name="house_task_done">已办任务</string>
    <string name="house_task_through">办结任务</string>
    <string name="house_task">%1$s有%2$s个待办任务，点击查看详情</string>
    <string name="house_task_area_title">详情信息>>></string>
    <string name="house_task_area_name">小区名称:</string>
    <string name="house_task_area_adress">小区地址:</string>
    <string name="house_task_area_alias">小区别名:</string>
    <string name="house_task_area_bolck_number">楼栋号:</string>
    <string name="house_task_area_household">单元:</string>
    <string name="house_task_area_defect_number">小区缺少%1$s信息</string>
    <string name="house_task_area_defect_bolck">这幢楼缺少%1$s信息</string>
    <string name="btn_save">保存</string>
    <string name="btn_ok">确定</string>
    <string name="btn_canle">取消</string>
    <string name="btn_checks">请选择</string>
    <string name="btn_checks_one">请选择任何一个选项</string>
    <string name="house_task_details">小区详情信息</string>
    <string name="house_details_base">基本信息</string>
    <string name="house_details_appearance_info">外观信息</string>
    <string name="house_details_appearance_security">保安厅</string>
    <string name="house_details_appearance_pension">养老服务中心</string>
    <string name="house_details_appearance_community">社区服务中心</string>
    <string name="house_details_appearance_layground">游乐场</string>
    <string name="house_details_appearance_sports">体育运动场</string>
    <string name="house_details_appearance_parking">停车场</string>
    <string name="house_details_appearance_cabinet">快递柜</string>
    <string name="house_details_appearance_exit">车库出入口个数</string>
    <string name="house_details_appearance_renfangtcw">人防停车位数量</string>
    <string name="house_details_appearance_chanquantcw">产权停车位数量</string>
    <string name="house_details_appearance_dishangtcw">地上停车位数量</string>
    <string name="house_details_appearance_dishangtcw_shoufei">地上停车收费</string>
    <string name="house_details_appearance_dixiatcw">地下停车位数量</string>
    <string name="house_details_appearance_dixiatcw_shoufei">地下停车收费</string>
    <string name="house_details_appearance_dixiatcw_youeryuan">小区配建幼儿园</string>
    <string name="house_details_appearance_lot">停车位总数</string>
    <string name="house_details_appearance_education">小区自带教育</string>
    <string name="house_details_appearance_equipment">配套设备</string>
    <string name="house_details_appearance_enclosure">围墙防护</string>
    <string name="house_details_appearance_scenery">景观</string>
    <string name="house_details_appearance_attribute">相关属性</string>
    <string name="house_details_appearance_house_attribute">住房属性</string>
    <string name="house_details_appearance_house_attribute_chanquannianxian">产权年限</string>
    <string name="house_details_appearance_house_attribute_building">总建面</string>
    <string name="house_details_appearance_house_attribute_volume">容积率</string>
    <string name="house_details_appearance_house_attribute_green">绿化率</string>
    <string name="house_details_appearance_house_attribute_developers">开发商</string>
    <string name="house_details_appearance_house_attribute_time">建筑年代</string>
    <string name="house_details_appearance_house_attribute_trading">商圈</string>
    <string name="house_details_appearance_house_attribute_land">土地性质</string>
    <string name="house_details_appearance_house_attribute_totalland">土地总面积</string>
    <string name="house_details_appearance_house_attribute_totalhouse">房屋总数</string>
    <string name="house_details_appearance_house_attribute_apartment">主力户型</string>
    <string name="house_details_appearance_house_attribute_communication">通讯设备</string>
    <string name="house_details_appearance_house_attribute_buile_structure">建筑结构</string>
    <string name="house_details_appearance_house_attribute_buile_type">建筑类型</string>
    <string name="house_details_appearance_house_attribute_road">道路及路面维护</string>
    <string name="house_details_appearance_house_attribute_kejizhuzhai">绿色科技住宅</string>
    <string name="house_details_appearance_house_attribute_peijiansheshi">配建商业设施</string>
    <string name="house_details_appearance_house_attribute_xiaofangsheshi">消防设施</string>
    <string name="house_details_appearance_house_attribute_daoluzhuangkuang">小区内道路状况</string>
    <string name="house_details_appearance_house_attribute_chuxin">小区出新时间</string>
    <string name="house_details_appearance_house_attribute_jianzhumianji">总建筑面积</string>
    <string name="house_details_appearance_property">物业信息</string>
    <string name="house_details_appearance_property_brand">物业名称</string>
    <string name="house_details_appearance_property_adress">物业地址</string>
    <string name="house_details_appearance_property_grade">物业等级</string>
    <string name="house_details_appearance_property_card">电子车辆出入管控</string>
    <string name="house_details_appearance_property_control">门禁系统</string>
    <string name="house_details_appearance_property_face">人脸识别系统</string>
    <string name="house_details_appearance_property_talkback">访客对讲系统</string>
    <string name="house_details_appearance_property_sanitation">环卫水平</string>
    <string name="house_details_appearance_property_security">安防</string>
    <string name="house_details_appearance_property_close">封闭</string>
    <string name="house_details_appearance_property_charging">收费标准</string>
    <string name="house_details_appearance_property_guanliyongfang">物业管理用房</string>
    <string name="house_details_appearance_property_wuyeshoufei">物业收费</string>
    <string name="house_details_appearance_property_anquanzidonghua">安全自动化系统</string>
    <string name="house_details_appearance_property_guanli">管理自动化</string>
    <string name="house_details_appearance_property_weishenghuanjing">卫生环境</string>
    <string name="house_details_appearance_other">其它</string>
    <string name="house_details_appearance_other_gatehouse_photos">门楼照片</string>
    <string name="house_details_appearance_other_places_photos">公共部位照片</string>
    <string name="house_details_appearance_other_facilities_photos">公共设施照片</string>
    <string name="house_details_appearance_other_negative_photos">负面照片</string>
    <string name="house_details_appearance_other_jingguan_photos">景观照片</string>
    <string name="house_details_appearance_other_weisheng_photos">卫生环境照片</string>
    <string name="house_details_appearance_other_daolu_photos">道路状况照片</string>
    <string name="house_poi_sheshi_photos">POI设施照片</string>
    <string name="house_task_bolck_details">小区幢楼详情信息</string>
    <string name="house_task_details_bolck_base">经纬度</string>
    <string name="house_task_details_bolck_qu">小区</string>
    <string name="house_task_details_bolck_moban">模板复用</string>
    <string name="house_task_details_bolck_number">楼栋号</string>
    <string name="house_task_details_bolck_name">栋名称</string>
    <string name="house_task_details_bolck_cellnumber">单元数</string>
    <string name="house_task_details_household">梯户</string>
    <string name="house_task_details_orientation">朝向</string>
    <string name="house_task_details_commercial">地下层数</string>
    <string name="house_task_details_commercial_number">地面所在层</string>
    <string name="house_task_details_top_szc">顶层所在层</string>
    <string name="house_task_details_zz_szc">住宅所在层</string>
    <string name="house_task_details_sp_szc">商铺所在层</string>
    <string name="house_task_details_ck_szc">车库所在层</string>
    <string name="house_task_details_maintain">住房保养情况</string>
    <string name="house_task_details_spacing">栋楼层总数</string>
    <string name="house_task_details_wall">外墙</string>
    <string name="house_task_details_top">顶层情况</string>
    <string name="house_task_details_scenery">景观</string>
    <string name="house_task_details_teshu_no">特殊层号</string>
    <string name="house_task_details_teshuhu">特殊户</string>
    <string name="house_task_details_jiaofuzhuangxiu">交付装修</string>
    <string name="house_task_details_loudongbaoyang">楼栋保养</string>
    <string name="house_task_details_shuifei">水费类型</string>
    <string name="house_task_details_dianfei">电费类型</string>
    <string name="house_task_details_zhufang_total">住房总户数</string>
    <string name="house_task_details_feizhuzhai">非住宅套数</string>
    <string name="house_task_details_jungong_time">栋竣工时间</string>
    <string name="house_task_details_dicengtedian_time">底层特点</string>
    <string name="house_task_bolck_house_attribute">住房属性</string>
    <string name="house_task_bolck_dong_attribute">销售许可证</string>
    <string name="house_task_bolck_time_attribute">建筑年代</string>
    <string name="house_task_bolck_housebuy_attribute">成品房</string>
    <string name="house_task_bolck_structure_attribute">建筑结构</string>
    <string name="house_task_bolck_structure_attribute_level">建筑等级</string>
    <string name="house_task_bolck_structure_attribute_type">建筑类型</string>
    <string name="house_task_bolck_structure_attribute_tdmj">土地面积</string>
    <string name="house_task_bolck_structure_attribute_time">土地时间</string>
    <string name="house_task_bolck_structure_attribute_zxcd">装修程度</string>
    <string name="house_task_bolck_structure_attribute_scenery">景观楼</string>
    <string name="house_task_bolck_residential_matching">居住配套</string>
    <string name="house_task_bolck_residential_science">科技建筑</string>
    <string name="house_task_bolck_residential_card">车库</string>
    <string name="house_task_bolck_residential_storeroom">储藏室</string>
    <string name="house_task_bolck_residential_water">供水</string>
    <string name="house_task_bolck_residential_electric">供电</string>
    <string name="house_task_bolck_residential_gas">供气</string>
    <string name="house_task_bolck_residential_xiaoshou">销售状态</string>
    <string name="house_task_bolck_residential_heat">供暖</string>
    <string name="house_task_bolck_residential_heat1">供热</string>
    <string name="house_task_bolck_residential_feng">新风</string>
    <string name="house_task_bolck_residential_jizhonggongnuan">集中供暖</string>
    <string name="house_task_bolck_residential_ggyl">公共娱乐空间</string>
    <string name="house_task_bolck_residential_xfss">消防设施</string>
    <string name="house_task_bolck_residential_echs">二次供水</string>
    <string name="house_task_bolck_residential_gl">阁楼</string>
    <string name="house_task_bolck_residential_dt">电梯</string>
    <string name="house_task_bolck_residential_dinuan">地暖</string>
    <string name="house_task_bolck_residential_zykt">中央空调</string>
    <string name="house_task_bolck_residential_menjing">门禁</string>
    <string name="house_task_bolck_residential_xinfeng">新风</string>
    <string name="house_task_bolck_residential_tikong">梯控</string>
    <string name="house_task_bolck_residential_lvsejianzxingji">绿色建筑星级</string>
    <string name="house_task_bolck_negative">负面因素</string>
    <string name="house_task_bolck_negative_electric">电污染</string>
</resources>