<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dime_16dp"
    android:layout_marginTop="@dimen/dime_16dp"
    android:layout_marginEnd="@dimen/dime_16dp"
    android:background="@drawable/shape_home_sence"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dime_8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dime_8dp"
            android:layout_marginEnd="@dimen/dime_8dp"
            android:text="@string/house_task_numbers"
            android:textColor="@color/home_black"
            android:textSize="@dimen/dime_16sp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dime_8dp"
            android:textColor="@color/home_black"
            android:textSize="@dimen/dime_16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dime_8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dime_8dp"
            android:layout_marginEnd="@dimen/dime_8dp"
            android:text="@string/house_task_adress"
            android:textColor="@color/home_black"
            android:textSize="@dimen/dime_16sp" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dime_8dp"
            android:textColor="@color/home_black"
            android:textSize="@dimen/dime_16sp" />
    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dime_8dp"
    android:layout_marginBottom="@dimen/dime_8dp"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dime_8dp"
        android:layout_marginEnd="@dimen/dime_8dp"
        android:text="@string/house_task_time"
        android:textColor="@color/home_black"
        android:textSize="@dimen/dime_16sp" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/dime_8dp"
        android:textColor="@color/home_black"
        android:textSize="@dimen/dime_16sp" />
</LinearLayout>

    <LinearLayout
        android:id="@+id/submit_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dime_8dp"
        android:layout_marginBottom="@dimen/dime_8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house_task_shenghe"
            android:layout_marginStart="@dimen/dime_8dp"
            android:textColor="@color/home_black"
            android:textSize="@dimen/dime_16sp" />
    </LinearLayout>
</LinearLayout>



