<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginStart="@dimen/dime_16dp"
android:layout_marginTop="@dimen/dime_16dp"
android:layout_marginEnd="@dimen/dime_16dp"
android:background="@drawable/shape_home_sence"
android:orientation="vertical">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dime_16dp"
    android:layout_marginTop="@dimen/dime_8dp"
    android:text="@string/house_details_appearance_property"
    android:textColor="@color/black"
    android:textSize="@dimen/dime_16sp" />

<View
    android:layout_width="match_parent"
    android:layout_height="@dimen/dime_1dp"
    android:layout_marginTop="@dimen/dime_8dp"
    android:background="@color/home_sence_3" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/dime_8dp"
        android:layout_marginTop="@dimen/dime_8dp"
        android:layout_marginEnd="@dimen/dime_8dp"
        android:background="@drawable/shape_dialog_secen"
        android:paddingTop="@dimen/dime_8dp"
        android:paddingBottom="@dimen/dime_8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dime_8dp"
            android:text="@string/house_details_appearance_property_brand"
            android:textColor="@color/black"
            android:textSize="@dimen/dime_16sp" />

        <EditText
            android:id="@+id/property_brand_et"
            android:layout_width="@dimen/dime_140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dime_16dp"
            android:layout_marginEnd="@dimen/dime_8dp"
            
            
            android:background="@drawable/shape_dialog_secen"
            android:padding="@dimen/dime_8dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/dime_16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/dime_8dp"
        android:layout_marginTop="@dimen/dime_8dp"
        android:layout_marginEnd="@dimen/dime_8dp"
        android:background="@drawable/shape_dialog_secen"
        android:paddingTop="@dimen/dime_8dp"
        android:paddingBottom="@dimen/dime_8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dime_8dp"
            android:text="@string/house_details_appearance_property_adress"
            android:textColor="@color/black"
            android:textSize="@dimen/dime_16sp" />

        <EditText
            android:id="@+id/property_adress_et"
            android:layout_width="@dimen/dime_140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dime_16dp"
            android:layout_marginEnd="@dimen/dime_8dp"
            android:background="@drawable/shape_dialog_secen"
            android:padding="@dimen/dime_8dp"
            
            
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/dime_16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/dime_8dp"
        android:layout_marginTop="@dimen/dime_8dp"
        android:layout_marginEnd="@dimen/dime_8dp"
        android:background="@drawable/shape_dialog_secen"
        android:paddingTop="@dimen/dime_8dp"
        android:paddingBottom="@dimen/dime_8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dime_8dp"
            android:text="@string/house_details_appearance_property_charging"
            android:textColor="@color/black"
            android:textSize="@dimen/dime_16sp" />

        <EditText
            android:id="@+id/property_charging_et"
            android:layout_width="@dimen/dime_140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dime_16dp"
            android:layout_marginEnd="@dimen/dime_8dp"
            android:background="@drawable/shape_dialog_secen"
            android:padding="@dimen/dime_8dp"
            
            
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/dime_16sp" />
    </RelativeLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dime_8dp"
    android:layout_marginTop="@dimen/dime_8dp"
    android:layout_marginEnd="@dimen/dime_8dp"
    android:background="@drawable/shape_dialog_secen"
    android:paddingTop="@dimen/dime_8dp"
    android:paddingBottom="@dimen/dime_8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/dime_8dp"
        android:text="@string/house_details_appearance_property_grade"
        android:textColor="@color/black"
        android:textSize="@dimen/dime_16sp" />

    <Spinner
        android:id="@+id/property_grade_spinner"
        android:layout_width="@dimen/dime_140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/dime_8dp"
        android:entries="@array/grade_level"
        android:textColor="@color/black"
        android:textSize="@dimen/dime_16sp" />
</RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dime_8dp"
        android:layout_marginTop="@dimen/dime_8dp"
        android:layout_marginEnd="@dimen/dime_8dp"
        android:background="@drawable/shape_dialog_secen"
        android:paddingTop="@dimen/dime_8dp"
        android:paddingBottom="@dimen/dime_8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dime_8dp"
            android:text="@string/house_details_appearance_property_card"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:textSize="@dimen/dime_16sp" />

        <Spinner
            android:id="@+id/property_card_spinner"
            android:layout_width="@dimen/dime_140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dime_8dp"
            android:entries="@array/has_or_no"
            android:textColor="@color/black"
            android:textSize="@dimen/dime_16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dime_8dp"
        android:layout_marginTop="@dimen/dime_8dp"
        android:layout_marginEnd="@dimen/dime_8dp"
        android:background="@drawable/shape_dialog_secen"
        android:paddingTop="@dimen/dime_8dp"
        android:paddingBottom="@dimen/dime_8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dime_8dp"
            android:text="@string/house_details_appearance_property_control"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:textSize="@dimen/dime_16sp" />

        <Spinner
            android:id="@+id/property_control_spinner"
            android:layout_width="@dimen/dime_140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dime_8dp"
            android:entries="@array/has_or_no"
            android:textColor="@color/black"
            android:textSize="@dimen/dime_16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dime_8dp"
        android:layout_marginTop="@dimen/dime_8dp"
        android:layout_marginEnd="@dimen/dime_8dp"
        android:background="@drawable/shape_dialog_secen"
        android:paddingTop="@dimen/dime_8dp"
        android:paddingBottom="@dimen/dime_8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dime_8dp"
            android:text="@string/house_details_appearance_property_face"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:textSize="@dimen/dime_16sp" />

        <Spinner
            android:id="@+id/property_face_spinner"
            android:layout_width="@dimen/dime_140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dime_8dp"
            android:entries="@array/has_or_no"
            android:textColor="@color/black"
            android:textSize="@dimen/dime_16sp" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dime_8dp"
        android:layout_marginTop="@dimen/dime_8dp"
        android:layout_marginEnd="@dimen/dime_8dp"
        android:background="@drawable/shape_dialog_secen"
        android:paddingTop="@dimen/dime_8dp"
        android:paddingBottom="@dimen/dime_8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dime_8dp"
            android:text="@string/house_details_appearance_property_talkback"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:textSize="@dimen/dime_16sp" />

        <Spinner
            android:id="@+id/property_talkback_spinner"
            android:layout_width="@dimen/dime_140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dime_8dp"
            android:entries="@array/has_or_no"
            android:textColor="@color/black"
            android:textSize="@dimen/dime_16sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dime_8dp"
        android:layout_marginTop="@dimen/dime_8dp"
        android:layout_marginEnd="@dimen/dime_8dp"
        android:background="@drawable/shape_dialog_secen"
        android:paddingTop="@dimen/dime_8dp"
        android:paddingBottom="@dimen/dime_8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dime_8dp"
            android:text="@string/house_details_appearance_property_close"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:textSize="@dimen/dime_16sp" />

        <Spinner
            android:id="@+id/property_close_spinner"
            android:layout_width="@dimen/dime_140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dime_8dp"
            android:entries="@array/has_or_no"
            android:textColor="@color/black"
            android:textSize="@dimen/dime_16sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dime_8dp"
        android:layout_marginTop="@dimen/dime_8dp"
        android:layout_marginEnd="@dimen/dime_8dp"
        android:background="@drawable/shape_dialog_secen"
        android:paddingTop="@dimen/dime_8dp"
        android:paddingBottom="@dimen/dime_8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dime_8dp"
            android:text="@string/house_details_appearance_property_sanitation"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:textSize="@dimen/dime_16sp" />

        <Spinner
            android:id="@+id/property_sanitation_spinner"
            android:layout_width="@dimen/dime_140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dime_8dp"
            android:textColor="@color/black"
            android:textSize="@dimen/dime_16sp" />
    </RelativeLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dime_8dp"
    android:layout_marginTop="@dimen/dime_8dp"
    android:layout_marginEnd="@dimen/dime_8dp"
    android:layout_marginBottom="@dimen/dime_8dp"
    android:background="@drawable/shape_dialog_secen"
    android:paddingTop="@dimen/dime_8dp"
    android:paddingBottom="@dimen/dime_8dp">

    <TextView
        android:id="@+id/appearance_property_security_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/dime_8dp"
        android:text="@string/house_details_appearance_property_security"
        android:textColor="@color/black"
        android:textSize="@dimen/dime_16sp" />

    <TextView
        android:id="@+id/appearance_security_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/dime_8dp"
        android:layout_marginEnd="@dimen/dime_8dp"
        android:layout_toEndOf="@+id/appearance_property_security_title"
        android:gravity="end"
        android:text="@string/btn_checks"
        android:textColor="@color/black"
        android:textSize="@dimen/dime_16sp" />

</RelativeLayout>

</LinearLayout>